src/corelib/kernel/qobjectdefs.h
@@ -472,6 +472,7 @@ class Q_CORE_EXPORT QMetaObject::Connection {
     friend class QObject;
     friend class QObjectPrivate;
     friend struct QMetaObject;
+    bool isConnected_helper() const;
 public:
     ~Connection();
     Connection();
@@ -481,7 +482,7 @@ public:
     operator bool() const;
 #else
     typedef void *Connection::*RestrictedBool;
-    operator RestrictedBool() const { return d_ptr ? &Connection::d_ptr : 0; }
+    operator RestrictedBool() const { return d_ptr && isConnected_helper() ? &Connection::d_ptr : 0; }
 #endif
 
 #ifdef Q_COMPILER_RVALUE_REFS
